# arsenal-base

./: .gitignore  LICENSE  README.md  README_curriculum_learning.md  arsenal.py
arsenal-ui/: build.sh  package.json
arsenal-ui/docker/: Dockerfile  default.conf  nginx.conf  proxy.conf
arsenal-ui/src/: App.js  setupProxy.js
arsenal-ui/src/actions/: ActionTypes.js  Actions.js  ActionsDH.js
arsenal-ui/src/components/: CSTPanel.jsx  EntityPanel.jsx  ErrorModal.jsx  Home.jsx  ImprovedCSTPanel.jsx  JsonPanel.jsx  NLInput.jsx  RegexpPanel.jsx
arsenal-ui/src/reducers/: index.js
arsenal-ui/src/store/: configureStore.js
doc/: Expressing-Conditions.md  Extending-a-Grammar.md  Training-a-Model.md  Understanding-Concrete-Syntax-Trees.md
noop-entity/: Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  project.clj  run-json.sh  run.sh
noop-entity/src/noop_entity/: core.clj  handler.clj
noop-entity/test/noop_entity/: handler_test.clj
ocaml-grammars/: arsenal_dependencies.opam
ocaml-grammars/arsenal_lib/: .dockerignore  .merlin  _tags  arsenal.opam  arsenal_lib.opam  dune-project
ocaml-grammars/arsenal_lib/src/: META  arsenal_lib.ml  arsenal_lib.mli  arsenal_lib.mllib  arsenal_options.ml  arsenal_options.mli  base_grammar.ml  base_grammar.mllib  base_grammar_pp.ml  base_grammar_pp.mli  dune  grammar_base.ml  grammar_base_pp.ml  grammar_base_pp.mli  old-arsenal_lib.ml  postprocess.ml  postprocess.mli  reformulate.ml  reformulate.mli  reformulate.mllib
ocaml-grammars/ppx_arsenal/: .merlin  META.ab  README.md  _oasis  _tags  dune-project  ppx_deriving_arsenal.ml  ppx_deriving_arsenal.opam
ocaml-grammars/ppx_arsenal/src/: .merlin  JSONdesc.ml  TypeString.ml  dune  ppx_deriving_arsenal.ml  serialise.ml  sexpPPX.ml  utils.ml
ocaml-grammars/ppx_deriving_random/: .gitignore  .merlin  README.md  ppx_deriving_random.opam
ocaml-grammars/ppx_deriving_random/examples/: dune  free_magma.ml
ocaml-grammars/ppx_deriving_random/src/: dune  ppx_deriving_random.ml
orchestrator/: Dockerfile  build.sh  process.py
orchestrator/aux/: entity_rewriter.py  sentence_cleaner.py
reformulate/builder/: Dockerfile  build.sh  deploy.sh
reformulate/reformulator/: Dockerfile  build.sh  deploy.sh
regexp/: README.md  docker-compose.yml  example.txt  gen_regexps.py  retrain_regexp_model.yml
regexp/generate-reformulate/: .dockerignore  .merlin  Dockerfile  README.txt  _tags  arsenal_re.opam  build.sh  deploy.sh  dune-project  generate.sh  record_grammar.sh  version  versions
regexp/generate-reformulate/docker/: README.md
regexp/generate-reformulate/docker/builder/: Dockerfile  build.sh  deploy.sh
regexp/generate-reformulate/docker/reformulator/: Dockerfile  build.sh
regexp/generate-reformulate/grammars/: grammar-2021-06-23T1810-07_7b2c337_REgrammar-re_2021-06-23T1812-07.json  grammar-2021-06-24T1637-07_41c4757_REgrammar-re_2021-06-24T1816-07.json  grammar-2022-06-07T0906-0700_11d9261_REgrammar.re_2022-06-07T0910-0700.json
regexp/generate-reformulate/src/: REgenerate.ml  REgrammar.ml  REgrammar_pp.ml  REreformulate.ml  dune  generate.ml  grammar2json.ml  re_sexp2json.ml  reformulate.ml  reformulateCI.ml
regexp/generate-reformulate/src/grammar/: .merlin  REgrammar.ml  REgrammar_pp.ml  dune
regexp/models/: download.sh
regexp/models/2021-06-24T1637-07_41c4757_REgrammar-re_2021-06-24T1816-07/: decoder  encoder  eng.vocab  notes.txt  pn.vocab  setup.json
regexp/models/regexp_2019-09-26/: decoder  encoder  eng.vocab  notes.txt  pn.vocab  setup.json
regexp/models/transformers/: README.md
regexp/regexp-entity/: Dockerfile  build.sh  deploy.sh  entity.py  example.txt  server.py
regexp/regexp-ui/: build.sh  deploy.sh  package.json
regexp/regexp-ui/docker/: Dockerfile  default.conf  nginx.conf
regexp/regexp-ui/public/: index.html
regexp/regexp-ui/src/: setupProxy.js
regexp/regexp-ui/src/actions/: ActionTypes.js  Actions.js
regexp/regexp-ui/src/components/: CSTPanel.jsx  EntityPanel.jsx  Home.jsx  JsonPanel.jsx  NLInput.jsx
regexp/regexp-ui/src/reducers/: index.js
regexp/regexp-ui/src/regex/: index.js
regexp/regexp-ui/src/util/: ImmutableLogTransformer.js
sal-entity/: Dockerfile  build.sh  deploy.sh  docker-compose.yml  entity.py  run.sh  server.py
seq2seq/: .gitignore  Dockerfile  README.md  build.sh  deploy.sh
seq2seq/src/: dependencies.txt  eval_seq2seq.py  filter_insts.py  nvidia_utils.py  overlap_check.py  reverse_train_seq2seq.py  run_nl2cst_server.py  scramble.py  train_seq2seq_batched.py  train_seq2seq_single.py  validate_seq2seq_model.py
seq2seq/src/ars2seq2seq/http/: cst_generator.py
seq2seq/src/ars2seq2seq/models/: batched_seq2seq.py  batched_seq2seq_v2.py  cyclic_mattn_seq2seq.py  eval.py  masked_cross_entropy.py  multi_attn_seq2seq.py  seq2seq.py
seq2seq/src/ars2seq2seq/util/: dataset.py  entities.py  model_util.py  polish-new.py  polish.py  (+4 more)
transformers/: Dockerfile  README.md  arsenal_target_tokenizer.json  arsenal_tokenizer.py  bert2arsenal.py  build.sh  build_dataset.py  clean_eval_set.py  eval.py  eval_typeforcing.py  generate_predictions.py  lm_scoring.py  requirements.txt  run.sh  target_model.py  target_tokenizer.py  utils.py
transformers/eval/: README.md  confusions_05-12-2021.json  confusions_07-30-2021.json  confusions_08-04-2021.json  confusions_08-05-2021.json  confusions_08-12-2021.json  lm_scores.txt  lm_scores_2021-04-14T1922_gpt2.txt  lm_scores_2021-07-30T0004_bert.txt  lm_scores_2021-07-30T0004_gpt2.txt
transformers/models/transformers/: README.txt
transformers/runtime/: arsenal_tokenizer.py  clean_input.py  run_nl2cst_transformers.py
transformers/source_tokenizer/: added_tokens.json  special_tokens_map.json
transformers/src/: args.py  arsenal_target_tokenizer.json  arsenal_tokenizer.py  bert2arsenal.py  build_dataset.py  compare_scores.py  eval.py  generate_predictions.py  inspect_data.py  lm_scoring.py  nl2cst.py  random_tests.py  requirements.txt  run.py  target_model.py
transformers/typeforcing_patch/: arsenal_typeforcer.py  dependency_versions_table.py  generation_utils.py  typeforcing_patch.sh
