opam-version: "2.0"
name: "ppx_deriving_arsenal"
synopsis: "Syntax extension for Arsenal"
description: "Syntax extension for Arsenal"
maintainer: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
authors: "Stephane Graham-Lengrand <stephane.graham-lengrand@csl.sri.com>"
# homepage: ""
# bug-reports: ""
license: "LGPL-3.0 with OCaml linking exception"
build: [
  ["dune" "build"]
]
install: [
  ["dune" "install"]
]
remove: [
  ["ocamlfind" "remove" "ppx_deriving_arsenal"]
]
depends: [
  "ocaml" {>= "4.11" & < "4.12"}
  "ocamlfind" {build}
  "dune" {build}
  "sexplib"
  "ppx_deriving"
  "ppxlib"
  "yojson"
  "ppx_deriving_random"
]
flags: light-uninstall
