(executable
 (name generate)
 (public_name arsenal_RE_generate)
 (libraries containers str yojson sexplib arsenal grammar)
 (preprocess (pps ppx_deriving.std ppx_deriving_arsenal))
 (modes exe)
 (promote (until-clean) (into ".."))
 (modules Generate)
)

(executable
 (name reformulate)
 (public_name arsenal_RE_reformulate)
 (libraries containers str yojson sexplib lwt cohttp cohttp-lwt cohttp-lwt-unix webmachine arsenal grammar)
 (preprocess (pps ppx_deriving.std ppx_deriving_arsenal))
 (modes exe)
 (promote (until-clean) (into ".."))
 (modules Reformulate)
)

(executable
 (name reformulateCI)
 (public_name arsenal_RE_reformulateCI)
 (libraries containers str yojson sexplib lwt cohttp cohttp-lwt cohttp-lwt-unix webmachine arsenal grammar)
 (preprocess (pps ppx_deriving.std ppx_deriving_arsenal))
 (modes exe)
 (promote (until-clean) (into ".."))
 (modules ReformulateCI)
)

(executable
 (name grammar2json)
 (public_name arsenal_RE_grammar2json)
 (libraries containers str yojson sexplib arsenal grammar)
 (preprocess (pps ppx_deriving.std ppx_deriving_arsenal))
 (modes exe)
 (promote (until-clean) (into ".."))
 (modules Grammar2json)
)

(env (dev (flags (:standard -warn-error -A -w -27-39))))
